Fix spacing and twitter handle for social sharing

--- a/content/themes/ghost-themes/assets/css/cactus.css
+++ b/content/themes/ghost-themes/assets/css/cactus.css
@@ -754,3 +754,7 @@ Author
   margin: 25px auto;
   display: block;
 }
+
+.tag-template #post-body {
+  margin-top: 10px;
+}
